--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"deploy": "npm run build && npx gh-pages -d build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"package": "svelte-package"
 	},
 	"devDependencies": {
 		"@fleet-sdk/mock-chain": "^0.12.0",
@@ -20,9 +21,24 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.5.2",
-		"vitest": "^3.2.4"
+		"vitest": "^3.2.4",
+		"@sveltejs/package": "^2.5.6"
 	},
+	"peerDependencies": {
+		"svelte": "^4"
+	},
+	"files": [
+		"dist"
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"type": "module",
+	"exports": {
+		".": {
+			"svelte": "./dist/index.js",
+			"types": "./dist/index.d.ts"
+		}
+	},
 	"dependencies": {
 		"@dagrejs/dagre": "^1.0.4",
 		"@fleet-sdk/compiler": "^0.12.0",
